--- a/docs/src/content/docs/introduction.mdx
+++ b/docs/src/content/docs/introduction.mdx
@@ -1,84 +1,392 @@
 ---
-title: Intro
+title: Introduction
 description: Intro
 ---
-
-
 import DualCode from '../../components/DualCode.astro';
 
-# Demo page
+The **Data Landing Zone (DLZ)** is a CDK construct designed to accelerate AI and data-related projects. It provides an
+opinionated Landing Zone, laying the foundation for a multi-account AWS strategy, so you can focus on delivering data
+and AI solutions.
 
-To show what we can do, see a better guide here:
-https://starlight.astro.build/guides/authoring-content/
+The DLZ can be deployed in existing AWS Organizations or used in greenfield projects. It supports setups ranging
+from small organizations with a few accounts to large enterprises with hundreds of accounts.
 
-## Heading 2
+The CDK construct is available in both TypeScript and Python.
 
-### Heading 3
+## Intended Audience
 
-[Link](#demo-page) section on this page
+The DLZ handles the responsibilities and routine tasks typically managed by a Cloud Center of Excellence (CCoE) team.
+It's easy enough for Data Engineers to use on their own, but flexible enough to be customized and fine-tuned by
+experienced Cloud Engineers.
 
-[Link](/getting-started#heading-1) to another page and section
+It's important to establish the following responsibilities to understand what is in and out of scope for the DLZ:
+- **In scope** - Any CCoE responsibilities and tasks, such as account management, security, networking, compliance, etc.
+- **Out of scope** - Application development, data engineering, and data science tasks.
 
-![data_landing_zone_logo.png](../../assets/data_landing_zone_logo.png)
+## Key Features
+
+Notable features of the DLZ include:
+
+- A CDK construct that can be used in TS and Python
+- Opinionated but configurable and extendable. Each stack and nested component can be extended if needed.
+- Leverages AWS Control Tower. Works with existing or new AWS Control Tower setups.
+- Suitable for greenfield projects or integration with existing AWS resources.
+- Deployable using any build systems like GitHub, GitLab, Jenkins, or locally.
+- Generates compliance reports, reporting the Control Tower Standards, SecurityHub controls, Config Rules and
+Service Control Policies enabled in each account.
+- Implements an internal wave- and stage-based deployment strategy for dependency management.
+- Includes helper scripts and Standard Operating Procedures (SOPs) for routine tasks.
+- Accompanied by comprehensive documentation.
+
+## Core Principles
+
+The DLZ adheres to the following principles:
+
+1. Opinionated but configurable defaults to suit diverse needs.
+2. High levels of automation with manual SOPs where needed.
+3. Simplicity and ease of understanding over complexity
+4. Focused scope, limited to Landing Zone responsibilities.
+
+## Integrated AWS Services
+
+- **AWS Organizations:** Seamless multi-account management.
+- **AWS Budgets:** Track spending by tags with notifications via Slack, Teams, or email.
+- **Service Control Policies (SCPs):** Manage service deny lists.
+- **Tag Policies:** Enforce resource tagging for spend tracking and ownership.
+- **Control Tower Controls:** Opinionated defaults for preventive, detective, and proactive standards.
+- **AWS Security Hub** and **AWS Config:** Additional standards not covered by Control Tower. Notifications are
+  delivered via Slack, Teams, or email
+- **Network Management:**
+  - Non-overlapping **VPCs** across accounts.
+  - **NAT Gateways** or instances for outbound private access.
+  - **VPC Peering** for cross-account/region communication.
+  - **Bastion Hosts** with **AWS SSM** for secure private resource access.
+  - Simplified routing configurations.
+- **IAM Identity Center (SSO):**
+  - User management with **AWS Identity Store** or external IDPs (e.g., Google, Active Directory).
+  - Manage **Permission Sets**
+  - Manage **Access Groups** to assign Users to Accounts with a given Permission Set
+- **Permission Boundaries:** Prevent privilege escalation for all IAM roles and users.
+- Configure **Lake Formation** for Data Lake management, including:
+  - General settings, like admins, version and setting hybrid iam mode
+  - Create **Tags** and specify their permissions for use within the same account and when sharing to other accounts.
+  - Optionally, set **Tag Permissions** on Tags. This is usually out of scope for DLZ, but can be configured.
 
 
-:::tip[Did you know?]
-Astro helps you build faster websites
-:::
 
-:::caution
-Astro helps you build faster websites
-:::
+## How it works
 
-:::danger
-Astro helps you build faster websites
-:::
+The DLZ defines all accounts and resources in a single CDK construct that can be used in Typescript or Python CDK
+project.
 
-> This is a blockquote, which is commonly used when quoting another person or document.
->
-> Blockquotes are indicated by a `>` at the start of each line.
-
-
-Highlight the code that is being talked about. Its not needed if it is basic/simple piece of code, but if it gets
-long and complex where you have to show the imports or other configs for example that are important for the piece
-of code you want to highlight and talk about.
-
-```ts {4-5}
-import * from not_important
-
-function demo() {
-  // This line (#2) and the next one are highlighted
-  return 'This is line #3 of this snippet';
-}
-```
-
-You can add the filename to the code block if it is important to know where the code is from.
-
-```ts
-// my-test-file.js
-function demo() {
-
-}
-```
-
-We should be displaying both the TS and Python code blocks in the same way.
-
-We loose the nice autocomplete in our IDEs(webstorm at least), but I have not found any way to prevent it,
-unfortunate, but it is what it is.
-
+The DLZ deploys resources into specified AWS accounts. These accounts must be created manually (SOP provided) in the
+workloads OU, and their Account IDs must be provided in the DLZ configuration. Each account is designated
+as either `development` or `production` to enable controlled, staged deployments, including the option for manual
+approvals in production environments.
 
 <DualCode>
   <Fragment slot="ts">
-```ts
-  function demo() {
+    ```ts
+    import {App} from 'aws-cdk-lib';
+    import { DataLandingZone } from '@DataChefHQ/data-landing-zone';
 
-  }
-```
+    const app = new App();
+    const dlz = new DataLandingZone(app, {
+      ...
+      regions: {
+        global: Region.EU_WEST_1,
+        regional: [Region.US_EAST_1],
+      },
+      organization: {
+        organizationId: 'o-0f5h921gk9',
+        root: { accounts: { management: { accountId: '123456789012', }, }, },
+        ous: {
+          workloads: {
+            ouId: 'ou-h2l0-gjr36ikn',
+            accounts: [{
+                name: 'development',
+                accountId: '123456789012',
+                type: DlzAccountType.DEVELOP,
+                ...
+              },{
+                name: 'production',
+                accountId: '123456789012',
+                type: DlzAccountType.PRODUCTION,
+                ...
+              },
+
+              ...AS MANY ACCOUNTS AS DESIRED...
+              ]
+          },
+       },
+       ...
+     }
+    });
+    ```
   </Fragment>
   <Fragment slot="python">
-```python
-  def demo:
-      pass
-```
+    ```python
+    #!/usr/bin/env python3
+    import aws_cdk as cdk
+    import recipes_dlz as dlz
+
+    app = cdk.App()
+    dlz.DataLandingZone(app,
+        local_profile="ct-sandbox-exported",
+        regions=dlz.DlzRegions(
+            global_=dlz.Region.EU_WEST_1,
+            regional=[dlz.Region.US_EAST_1],
+        ),
+        organization=dlz.DLzOrganization(
+            organization_id='o-0f5h921gk9',
+            root=dlz.RootOptions(
+                accounts=dlz.OrgRootAccounts(
+                    management=dlz.DLzManagementAccount(account_id='123456789012'),
+                ),
+            ),
+            ous=dlz.OrgOus(
+                workloads=dlz.OrgOuWorkloads(
+                    ou_id='ou-h2l0-gjr36ikn',
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='development',
+                            account_id='123456789012',
+                            type=dlz.DlzAccountType.DEVELOP,
+                        ),
+                        dlz.DLzAccount(
+                            name='production',
+                            account_id='123456789012',
+                            type=dlz.DlzAccountType.PRODUCTION,
+                        ),
+                    ],
+                ),
+            )
+        ),
+    )
+app.synth()
+    ```
   </Fragment>
 </DualCode>
+
+The construct processes the provided configuration to create logical deployment layers for resources. Each layer
+consists of a Global Wave and optionally one or more Regional Waves. This structure ensures that all `global` stacks
+for the accounts are deployed before the `regional` stacks. Resources in the `global` stack are region-independent, such
+as IAM roles, whereas resources like VPCs can be deployed in both `global` and `regional` stacks if configured as such.
+
+```mermaid
+graph
+    subgraph base["Base Layer"]
+      direction TB
+
+      subgraph global["Global Wave"]
+        direction TB
+        subgraph globalAccountN["Account ...N"]
+          direction TB
+          gan["Global Stack"]
+        end
+         subgraph globalAccountB["Account B"]
+          direction TB
+          gab["Global Stack"]
+        end
+        subgraph globalAccountA["Account A"]
+          direction TB
+          gaa["Global Stack"]
+        end
+      end
+
+      subgraph regional["Regional Wave"]
+        direction TB
+        subgraph regionalAccountN["Account ...N"]
+          ran1["Region Stack (1)"]
+          ran2["Region Stack (2)"]
+        end
+        subgraph regionalAccountB["Account B"]
+          rab1["Region Stack (1)"]
+          rab2["Region Stack (2)"]
+        end
+        subgraph regionalAccountA["Account A"]
+          raa1["Region Stack (1)"]
+          raa2["Region Stack (2)"]
+        end
+      end
+      global --> regional
+    end
+```
+
+Dependencies between regions and accounts are managed by separating stacks into waves. This ensures that any
+specified SSM Parameter value is available for use in subsequent waves.
+
+The [cdk-express-pipeline](https://github.com/rehanvdm/cdk-express-pipeline) is utilized to create Waves and Stages,
+enabling the controlled deployment of resources as described above. It allows deployments from any build
+systems, including GitHub, GitLab, Jenkins, and even local environments.
+
+The construct processes the configuration to provision the appropriate resources in the required accounts.
+
+For example, the following config enables VPC Peering from both the `development` VPCs in `eu-west-1` and `us-east-1`,
+all subnets, to the private subnets in the `production` account's VPC in the `eu-west-1` region.
+
+<DualCode>
+  <Fragment slot="ts">
+    ```ts {54-57}
+    import {App} from 'aws-cdk-lib';
+    import { DataLandingZone } from '@DataChefHQ/data-landing-zone';
+
+    const app = new App();
+    const dlz = new DataLandingZone(app, {
+      regions: {
+        global: Region.EU_WEST_1,
+        regional: [Region.US_EAST_1],
+      },
+      organization: {
+        ous: {
+          workloads: {
+            ouId: 'ou-h2l0-gjr36ikn',
+            accounts: [{
+                name: 'development',
+                vpcs: [
+                  {
+                    name: 'default', region: Region.EU_WEST_1,
+                    cidr: '10.0.0.0/16', routeTables:
+                    [
+                      { name: 'private', subnets: [ ... ] },
+                      { name: 'public', subnets: [ ... ] }
+                    ],
+                  },
+                  {
+                    name: 'default', region: Region.US_EAST_1,
+                    cidr: '10.1.0.0/16', routeTables:
+                    [
+                      { name: 'private', subnets: [ ... ] },
+                      { name: 'public', subnets: [ ... ] }
+                    ],
+                  },
+                ],
+              },{
+                name: 'production',
+                vpcs: [
+                  {
+                    name: 'default', region: Region.EU_WEST_1,
+                    cidr: '10.2.0.0/16', routeTables:
+                    [
+                      { name: 'private', subnets: [ ... ] },
+                      { name: 'public', subnets: [ ... ] }
+                    ],
+                  },
+                ],
+                ...
+              }]
+          },
+       },
+       ...
+     },
+     network: {
+      connections: {
+        vpcPeering: [{
+          source: NetworkAddress.fromString('development'),
+          destination: NetworkAddress.fromString('production.us-east-1.default.private'),
+        }],
+      },
+     },
+     ...
+    });
+    ```
+  </Fragment>
+  <Fragment slot="python">
+    ```python {80-85}
+    #!/usr/bin/env python3
+    import aws_cdk as cdk
+    import recipes_dlz as dlz
+
+    app = cdk.App()
+    dlz.DataLandingZone(app,
+        regions=dlz.DlzRegions(
+            global_=dlz.Region.EU_WEST_1,
+            regional=[dlz.Region.US_EAST_1],
+        ),
+        organization=dlz.DLzOrganization(
+            ous=dlz.OrgOus(
+                workloads=dlz.OrgOuWorkloads(
+                    ou_id='ou-vh4d-nc2zzf9z',
+                    accounts=[
+                        dlz.DLzAccount(
+                            name='development',
+                            vpcs=[
+                                dlz.DlzVpcProps(
+                                    name='default',
+                                    region=dlz.Region.EU_WEST_1,
+                                    cidr='10.0.0.0/16',
+                                    route_tables=[
+                                        dlz.DlzRouteTableProps(
+                                            name='private',
+                                            subnets=[ ... ],
+                                        ),
+                                        dlz.DlzRouteTableProps(
+                                            name='public',
+                                            subnets=[ ...],
+                                        )
+                                    ]
+                                ),
+                                dlz.DlzVpcProps(
+                                    name='default',
+                                    region=dlz.Region.US_EAST_1,
+                                    cidr='10.1.0.0/16',
+                                    route_tables=[
+                                        dlz.DlzRouteTableProps(
+                                            name='private',
+                                            subnets=[ ... ],
+                                        ),
+                                        dlz.DlzRouteTableProps(
+                                            name='public',
+                                            subnets=[ ...],
+                                        )
+                                    ]
+                                )
+                            ],
+                        ),
+                        dlz.DLzAccount(
+                            name='production',
+                            vpcs=[
+                                dlz.DlzVpcProps(
+                                    name='default',
+                                    region=dlz.Region.EU_WEST_1,
+                                    cidr='10.2.0.0/16',
+                                    route_tables=[
+                                        dlz.DlzRouteTableProps(
+                                            name='private',
+                                            subnets=[ ... ],
+                                        ),
+                                        dlz.DlzRouteTableProps(
+                                            name='public',
+                                            subnets=[ ...],
+                                        )
+                                    ]
+                                ),
+                            ],
+                        ),
+                    ],
+                ),
+                suspended=dlz.OrgOuSuspended(
+                    ou_id='ou-vh4d-rhcmhzsy',
+                ),
+            )
+        ),
+        network=dlz.Network(
+            connections=dlz.NetworkConnection(
+                vpc_peering=[
+                    dlz.NetworkConnectionVpcPeering(
+                        source=dlz.NetworkAddress.from_string('development'),
+                        target=dlz.NetworkAddress.from_string('production.us-east-1.default.private')
+                    )
+                ]
+            )
+        )
+    )
+    app.synth()
+    ```
+  </Fragment>
+</DualCode>
+
+The DLZ abstracts the complexity of the AWS resources and ensures that the correct resources are created in the
+correct accounts in the right order. For instance, this example provisions the VPCs in the Base Layer and sets up the
+many VPC Peering roles, connections, and routes within the Networking Layers.
+
