docs: landing page and intro page

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Data Landing Zone
-description: Get started building your docs site with Starlight.
+description: Data Landing Zone (DLZ) is CDK Construct of an opinionated Landing Zone that is built to support and enabled AI, data, data mesh and general purpose projects.
 template: splash
 hero:
   tagline: Data Landing Zone (DLZ) is CDK Construct of an opinionated Landing Zone that is built to support and enabled AI, data, data mesh and general purpose projects.
