docs: add readme and contributing

--- a/docs/src/content/docs/introduction.mdx
+++ b/docs/src/content/docs/introduction.mdx
@@ -11,7 +11,9 @@ and AI solutions.
 The DLZ can be deployed in existing AWS Organizations or used in greenfield projects. It supports setups ranging
 from small organizations with a few accounts to large enterprises with hundreds of accounts.
 
-The CDK construct is available in both TypeScript and Python.
+The CDK construct is available in both TypeScript and Python. Example GitHub repositories showing usage:
+- [TypeScript Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-typescript)
+- [Python Example GitHub Repo](https://github.com/DataChefHQ/aws-data-landing-zone-example-python)
 
 ## Intended Audience
 
