feat: add Banner for WIP

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -5,7 +5,9 @@ description: Step-by-step guide to configuring and deploying the AWS Data Landin
 
 import DualCode from "../../components/DualCode.astro";
 
-# Getting Started
+:::caution
+WIP: This part is still under development.
+:::
 
 This guide will walk you through the process of configuring and deploying the
 **AWS Data Landing Zone**. The landing zone simplifies the setup of a secure,
@@ -156,7 +158,8 @@ accounts.
     },
 
 };
-```
+
+````
 
 
   </Fragment>
